tests/types/errors/assign_handle_foreign_type.expr
#!strict

import counter from "examples:counter";

const handle<examples:counter:CounterHandle> source = counter.create(1i64);
const handle<examples:math:CounterHandle> bad = source;
